--- a/src/main/resources/templates/election-results.html
+++ b/src/main/resources/templates/election-results.html
@@ -161,7 +161,7 @@
                                 <!--                                <div class="card-tools">-->
                                 <!--                                    <ul class="nav nav-pills ml-auto">-->
                                 <!--                                        <li class="nav-item">-->
-                                <!--                                            <button type="button" class="btn btn-primary float-right"-->
+                                <!--                                            <button type="button" class="btn btn-info float-right"-->
                                 <!--                                                    data-toggle="modal" data-target="#election-registration-modal"><i-->
                                 <!--                                                    class="fas fa-vote-yea"></i> Create an Election-->
                                 <!--                                            </button>-->
