--- a/src/main/resources/templates/fragments/layout-fragments.html
+++ b/src/main/resources/templates/fragments/layout-fragments.html
@@ -13,7 +13,7 @@
     <!-- JQVMap -->
     <link rel="stylesheet" th:href="@{plugins/jqvmap/jqvmap.min.css}">
     <!-- Theme style -->
-    <link rel="stylesheet" th:href="@{dist/css/adminlte.min.css}">
+    <link rel="stylesheet" th:href="@{dist/css/adminlte.css}">
     <!-- overlayScrollbars -->
     <link rel="stylesheet" th:href="@{plugins/overlayScrollbars/css/OverlayScrollbars.min.css}">
     <!-- Daterange picker -->
