--- a/src/main/resources/templates/fragments/modal-fragments.html
+++ b/src/main/resources/templates/fragments/modal-fragments.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="modal-footer justify-content-between">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="submit" class="btn btn-info">Save</button>
                 </div>
             </form>
         </div>
@@ -283,7 +283,7 @@
                 </div>
                 <div class="modal-footer justify-content-between">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="submit" class="btn btn-info">Save</button>
                 </div>
             </form>
         </div>
@@ -341,7 +341,7 @@
                 </div>
                 <div class="modal-footer justify-content-between">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="submit" class="btn btn-info">Save</button>
                 </div>
             </form>
         </div>
@@ -410,7 +410,7 @@
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 <form th:action="@{/assign-all-candidates-to-election}" method="post">
                     <input type="number" hidden value="0" name="electionId" id="election">
-                    <button type="submit" class="btn btn-primary"><i class="fa fa-plus-square"></i> Add All</button>
+                    <button type="submit" class="btn btn-info"><i class="fa fa-plus-square"></i> Add All</button>
                 </form>
             </div>
         </div>
