--- a/src/main/resources/templates/voting-form.html
+++ b/src/main/resources/templates/voting-form.html
@@ -34,7 +34,7 @@
                                 <!--                                <div class="card-tools">-->
                                 <!--                                    <ul class="nav nav-pills ml-auto">-->
                                 <!--                                        <li class="nav-item">-->
-                                <!--                                            <button type="button" class="btn btn-primary float-right"-->
+                                <!--                                            <button type="button" class="btn btn-info float-right"-->
                                 <!--                                                    data-toggle="modal" data-target="#candidate-registration-modal"><i-->
                                 <!--                                                    class="fas fa-user-plus"></i> Add Candidate-->
                                 <!--                                            </button>-->
