--- a/src/main/resources/templates/fragments/navbar-fragments.html
+++ b/src/main/resources/templates/fragments/navbar-fragments.html
@@ -122,16 +122,18 @@
         <!--                <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>-->
         <!--            </div>-->
         <!--        </li>-->
-        <li class="nav-item">
-            <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-                <i class="fas fa-expand-arrows-alt"></i>
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-                <i class="fas fa-th-large"></i>
-            </a>
-        </li>
+
+
+<!--        <li class="nav-item">-->
+<!--            <a class="nav-link" data-widget="fullscreen" href="#" role="button">-->
+<!--                <i class="fas fa-expand-arrows-alt"></i>-->
+<!--            </a>-->
+<!--        </li>-->
+<!--        <li class="nav-item">-->
+<!--            <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">-->
+<!--                <i class="fas fa-th-large"></i>-->
+<!--            </a>-->
+<!--        </li>-->
         <li class="nav-item">
             <form th:action="@{/sign-out}" method="post">
                 <button class="btn btn-default nav-link" type="submit">
