FINISHED::UI changes

--- a/src/main/resources/templates/fragments/layout-fragments.html
+++ b/src/main/resources/templates/fragments/layout-fragments.html
@@ -100,7 +100,7 @@
 <!-- Preloader -->
 <div th:fragment="preloader" class="preloader flex-column justify-content-center align-items-center">
     <!--        <img class="animation__shake" th:src="@{dist/img/AdminLTELogo.png}" alt="AdminLTELogo" height="60" width="60">-->
-    <h2 class="animation__wobble">Election Voting System</h2>
+    <h2 class="animation__shake">Fingerprint-based Smart Election System</h2>
 </div>
 
 <div th:fragment="page_header(title)" class="content-header">
