--- a/src/main/resources/templates/fragments/navbar-fragments.html
+++ b/src/main/resources/templates/fragments/navbar-fragments.html
@@ -1,4 +1,4 @@
-<nav th:fragment="top_navbar" class="main-header navbar navbar-expand navbar-white navbar-light">
+<nav th:fragment="top_navbar" class="main-header navbar navbar-expand navbar-cyan navbar-light">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
         <li class="nav-item">
@@ -124,16 +124,16 @@
         <!--        </li>-->
 
 
-<!--        <li class="nav-item">-->
-<!--            <a class="nav-link" data-widget="fullscreen" href="#" role="button">-->
-<!--                <i class="fas fa-expand-arrows-alt"></i>-->
-<!--            </a>-->
-<!--        </li>-->
-<!--        <li class="nav-item">-->
-<!--            <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">-->
-<!--                <i class="fas fa-th-large"></i>-->
-<!--            </a>-->
-<!--        </li>-->
+        <li class="nav-item">
+            <a class="nav-link" data-widget="fullscreen" href="#" role="button">
+                <i class="fas fa-expand-arrows-alt"></i>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
+                <i class="fas fa-th-large"></i>
+            </a>
+        </li>
         <li class="nav-item">
             <form th:action="@{/sign-out}" method="post">
                 <button class="btn btn-default nav-link" type="submit">
