--- a/src/main/resources/templates/fragments/sidebar-fragments.html
+++ b/src/main/resources/templates/fragments/sidebar-fragments.html
@@ -1,9 +1,9 @@
-<aside th:fragment="sidebar(user)" class="main-sidebar sidebar-dark-primary elevation-4">
+<aside th:fragment="sidebar(user)" class="main-sidebar sidebar-light-cyan elevation-4">
     <!-- Brand Logo -->
     <a href="#" class="brand-link text-center">
 <!--        <img th:src="@{dist/img/AdminLTELogo.png}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"-->
 <!--             style="opacity: .8">-->
-        <h5 class="">ELECTION VOTING SYSTEM</h5>
+        <h5 class="">SMART VOTING SYSTEM</h5>
     </a>
     <a href="#" class="brand-link">
         <span class="brand-text font-weight-light" th:text="${user.getType()}"></span>
@@ -12,9 +12,9 @@
     <a href="#" class="brand-link">
 
         <div class="user-panel d-flex" style="border-bottom: 0px solid ;">
-            <div class="image">
-                <img th:src="@{dist/img/user2-160x160.jpg}" class="img-circle elevation-2" alt="User Image">
-            </div>
+<!--            <div class="image">-->
+<!--                <img th:src="@{dist/img/user2-160x160.jpg}" class="img-circle elevation-2" alt="User Image">-->
+<!--            </div>-->
             <div class="info">
                 <span class="d-block" th:text="${user.getName()}"></span>
             </div>
